--- a/html5ever/Cargo.toml
+++ b/html5ever/Cargo.toml
@@ -30,6 +30,7 @@ name = "serializer"
 log = "0.4"
 mac = "0.1"
 markup5ever = { version = "0.8", path = "../markup5ever" }
+lazy_static = "1.3.0"
 
 [dev-dependencies]
 rustc-serialize = "0.3.15"
